fixed form validation for double spaces

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -21,11 +21,11 @@
 
                                 <!-- first name -->
                                 <label for="first_name">first name</label>
-                                <input disabled type="text" name="first_name" value="{{ user.first_name|title }}" minlength="1" maxlength="20" pattern="^(?!.* {2})[a-zA-z0-9-_]{1,20}$" class="validate" required/>
+                                <input disabled type="text" name="first_name" value="{{ user.first_name|title }}" minlength="1" maxlength="20" pattern="^(?!.*  )[a-zA-z0-9-_]{1,20}$" class="validate" required/>
 
                                 <!-- last name -->
                                 <label for="last_name">last name</label>
-                                <input disabled type="text" name="last_name" value="{{ user.last_name|title }}" minlength="1" maxlength="20" pattern="^(?!.* {2})[a-zA-z0-9-_]{1,20}$" class="validate" required/>
+                                <input disabled type="text" name="last_name" value="{{ user.last_name|title }}" minlength="1" maxlength="20" pattern="^(?!.*  )[a-zA-z0-9-_]{1,20}$" class="validate" required/>
 
                                 <!-- dob -->
                                 <label for="dob">date of birth</label>
@@ -43,7 +43,7 @@
 
                                 <!-- btns -->
                                 <input disabled type="submit" value="Submit" class="btn profile-submit-btn" id="user-edit-submit">
-                                <input disabled type="submit" value="Cancel" class="btn profile-submit-btn orange" id="user-edit-cancel" formaction="/profile/{{session.user}}">
+                                <input disabled type="submit" value="Cancel" class="btn profile-submit-btn orange" onclick="return this.form.reset();" id="user-edit-cancel" formaction="/profile/{{session.user}}">
                                 <input disabled type="submit" value="Delete" class="btn profile-submit-btn red" id="user-edit-delete" formaction="/user/delete" onclick="return confirm('Are you sure you want to delete your account?');">
                             </form>
                         </div>
@@ -98,6 +98,11 @@
             $('.collapsible').children('li').addClass('active')
         }
     });
+
+    var cancel = function(event) {
+        event.preventDefault();  
+    }
+
    
 </script>
 {% endblock %}
