--- a/templates/register.html
+++ b/templates/register.html
@@ -39,14 +39,14 @@
                 <!-------first name------->
                 <div class="row">
                     <div class="input-field col s12">
-                        <input id="first_name" name="first_name" type="text" class="validate" minlength="1" maxlength="20" pattern="^(?!.* {2})[a-zA-z]{1,20}$" required>
+                        <input id="first_name" name="first_name" type="text" class="validate" minlength="1" maxlength="20" pattern="^(?!.*  )[a-zA-z]{1,20}$" required>
                         <label for="first_name">First Name</label>
                     </div>
                 </div>
                 <!-------last name------->
                 <div class="row">
                     <div class="input-field col s12">
-                        <input id="last_name" name="last_name" type="text" class="validate" minlength="1" maxlength="20" pattern="^(?!.* {2})[a-zA-z]{1,20}$" required>
+                        <input id="last_name" name="last_name" type="text" class="validate" minlength="1" maxlength="20" pattern="^(?!.*  )[a-zA-z]{1,20}$" required>
                         <label for="last_name">Last Name</label>
                     </div>
                 </div>
