--- a/templates/recipe_builder.html
+++ b/templates/recipe_builder.html
@@ -18,7 +18,7 @@
             <div class="row">
                 <div class="input-field col s12">
                     <input id="title" name="title" type="text" class="validate" minlength="1" maxlength="100"
-                        pattern="^(?!.*  )[a-zA-z0-9-_, ]{1,100}$" required>
+                        pattern="^(?!.*  )[a-zA-z0-9-_,&'’ ]{1,100}$" required>
                     <label for="username">Recipe Title</label>
                 </div>
             </div>
@@ -26,7 +26,7 @@
             <div class="row">
                 <div class="input-field col s12">
                     <input id="desc" name="desc" type="text" class="validate" minlength="1" maxlength="300"
-                        pattern="^(?!.*  )[a-zA-z0-9-_, ]{1,300}$" required>
+                        pattern="^(?!.*  )[a-zA-z0-9-_,&'’ ]{1,300}$" required>
                     <label for="username">Describe your recipe</label>
                 </div>
             </div>
